apps/uptime-kuma/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  type: ClusterIP
  selector:
    app: uptime-kuma
  ports:
    - name: web
      port: 3001
      targetPort: 3001
      protocol: TCP
