apps/uptime-kuma/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
      sectionName: https
  hostnames:
    - kuma.biplane.v6.rocks
  rules:
    - backendRefs:
        - name: uptime-kuma
          port: 80
